Bug 250594 - Editing default layout: Change still shown in layout editor, and copy does not work
Summary: Editing default layout: Change still shown in layout editor, and copy does no...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlist/Playlist Layout Editor (other bugs)
Version First Reported In: 2.6-git
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 2.7
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-08 20:12 UTC by Ralf Jung
Modified: 2013-02-01 22:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Jung 2010-09-08 20:12:20 UTC
Version:           2.3.0 (using KDE 4.4.2) 
OS:                Linux

When editing one of the shipped default layouts, after confirming that a copy is done, the layout editor still shows the changes I made in the default layout. In addition, choosing the copy and the default layout still shows the old layout, i.e. the changes I made are ignored.

Reproducible: Always

Steps to Reproduce:
In the layout editor, drag the "Artist" to the beginning of the "body" line (i.e. before the "Track"). Hit "Apply" and confirm the dialogue saying a copy is made. Now select the "Default layout" again in the editor and see how it looks like. Then close it and choose the copy as active layout.

Actual Results:  
The "Default" layout in the editor shows the new field. The playlist looks like before though.

Expected Results:  
The "Default" layout should not have changed, only the copy. And of course, the "Artist" should appear for the body items of album groups.

OS: Linux (x86_64) release 2.6.32-24-generic
Compiler: cc
Comment 1 Niko Vuokko 2010-12-30 13:21:04 UTC
I have this one too in 2.3.2 (4.5.4). Tried adding Rating field just before song length to the Default layout, but it never works. The only modification that works seems to be the 'Show cover' tick box. Adding or removing fields doesn't work.
Comment 2 Myriam Schweingruber 2011-01-04 03:47:57 UTC
Confirmed and bumping version.
Comment 3 Ralf Jung 2011-04-23 12:38:31 UTC
I updated to Amarok 2.4.0, the bug is still around.
Comment 4 Myriam Schweingruber 2011-06-04 12:16:04 UTC
This is an automated message from the triager:

Amarok 2.4.1 has been released on May 8 already. Could you please upgrade and test if you can still reproduce this bug?

Without feedback within a month we will close this bug as resolved.

Thank you for your understanding.
Comment 5 Myriam Schweingruber 2011-07-16 07:35:32 UTC
Closing for lack of feedback. Feel free to reopen if you can still reproduce
this with Amarok 2.4.2 beta 1 or later and provide the necessary feedback.
Comment 6 Ralf Jung 2011-07-16 08:25:41 UTC
As mentioned in 272471 and via private email, I won't be able to update to a later version of Amarok before the end of the semester. I can't afford my PC stopping to work, and Amarok is not available for my current distribution. I plan to update to Debian Testing in two weeks, which will give me Amarok 2.4.1.
You don't seriously expect me to update to a beta version to keep this bug valid, do you?
Comment 7 Myriam Schweingruber 2011-07-16 08:31:48 UTC
Sorry, but since you didn't reply here this was closed automatically. Reopening.
Comment 8 Ralf Jung 2011-07-27 21:43:53 UTC
Things changed slightly with Amarok 2.4.1 on Debian testing: The actual playist now looks correct when choosing the copy. However, in the playlist layout editor, when the original layout is selected, it still incorrectly shows the modification.
Comment 9 Myriam Schweingruber 2011-07-28 13:35:02 UTC
Thank you for the feedback.
Comment 10 Ralf Jung 2012-09-13 19:16:06 UTC
This still happens with Amarok v2.6.0.
I really wonder why nobody can reproduce this, as I saw this on three machines now, no matter whether I used Debian packages or compiled all the stuff (including kdelibs) myself, no matter how often I reset my entire KDE configuration.
Comment 11 Myriam Schweingruber 2012-09-14 09:11:22 UTC
(In reply to comment #10)
> This still happens with Amarok v2.6.0.
> I really wonder why nobody can reproduce this, as I saw this on three
> machines now, no matter whether I used Debian packages or compiled all the
> stuff (including kdelibs) myself, no matter how often I reset my entire KDE
> configuration.

Well, in comment #1 and #2 you can see that this was confirmed, so we know about the problem. But the issue here is that we currently don't have a maintainer for that code and we use our resources for more important fixes for now.

What I have found is that as soon as you try to put more than 3 items on a line it has problems, and modifying the automatic width to a manual one has solved the problem for me in most cases.
Comment 12 Ralf Jung 2012-09-14 09:14:27 UTC
(In reply to comment #11)
> Well, in comment #1 and #2 you can see that this was confirmed, so we know
> about the problem. But the issue here is that we currently don't have a
> maintainer for that code and we use our resources for more important fixes
> for now.
Sorry, I was not aware (or forgot) that there is no "CONFIRMED" state here, and "NEW" means the bug is confirmed.

> What I have found is that as soon as you try to put more than 3 items on a
> line it has problems, and modifying the automatic width to a manual one has
> solved the problem for me in most cases.
On my system, the bug is not at all related to having more than three items on a line. It does not matter which modification I do in the original layout.
Comment 13 Myriam Schweingruber 2012-09-14 09:29:00 UTC
I was wondering: does the Default layout still show the change after a restart? I think this is just a caching issue as you can not change the default ones anyway.
Comment 14 Ralf Jung 2012-09-14 09:32:34 UTC
(In reply to comment #13)
> I was wondering: does the Default layout still show the change after a
> restart?
No, a restart reverts whatever changes I (seemingly) did. Also, the change is not actually applied when using the layout for the playlist, it's just shown in the editor.
Comment 15 Ralf Engels 2013-02-01 22:45:06 UTC
Git commit fc04548aa90b7130b023b001cb2977b50864117c by Ralf Engels.
Committed on 01/02/2013 at 20:56.
Pushed by rengels into branch 'master'.

Fix Editing default layout: Change still shown in layout editor
FIXED-IN: 2.8

M  +24   -20   src/playlist/layouts/PlaylistLayoutEditDialog.cpp
M  +3    -0    src/playlist/layouts/PlaylistLayoutEditDialog.h

http://commits.kde.org/amarok/fc04548aa90b7130b023b001cb2977b50864117c