Fix Editing default layout: Change still shown in layout editor

BUG: 250594
FIXED-IN: 2.8